2007-07-02  Vincent Untz  <vuntz@gnome.org>

	* menu.c: (menu_destroy_context_menu): new
	(create_item_context_menu): when the menu item is destroyed, also
	destroy the context menu and block the restoring of grabs which would
	fail since the applications menu has been destroyed.
	Fix bug #350626.

==================== 2.18.2 ====================

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-applet-frame.c: (panel_applet_frame_set_flags_from_any):
	update the background if a handle was added. Fix initial background
	not working for handles.
	Fix bug #343168

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-run-dialog.c: (program_list_selection_changed): don't reset
	visibility of all programs in the program list. And beautify the code.
	Fix bug #339963

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-ditem-editor.c: (panel_ditem_editor_setup_ui): always put
	initial focus on the name entry
	Fix part of bug #440690

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* launcher.c: (panel_launcher_create_with_id): if we have a file URI,
	we need to unescape the URI before putting the filename in gconf,
	since the file on disk is unescaped.
	Fix bug #432942

2007-05-28  Vincent Untz  <vuntz@gnome.org>

	Backport from HEAD.

	* panel-run-dialog.glade: fix alignment of the run button again, and
	use markup for the label in there

==================== 2.18.1 ====================

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_lock_screen_action_get_command): if EUID is 0,
	return NULL if the user wants to lock the screen: gnome-screensaver
	and xscreensaver don't support root locking the screen.
	Fix bug #424545.

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: (panel_run_dialog_destroy): call
	panel_run_dialog_disconnect_pixmap()
	(panel_run_dialog_disconnect_pixmap): new function, to disconnect
	signals