@@ -22,8 +22,6 @@ void back_change(AppletInfo *info, PanelWidget *panel);
 
 PanelData *panel_setup (PanelToplevel *toplevel);
 
-GtkWidget *make_popup_panel_menu (PanelWidget *panel);
-
 GdkScreen *panel_screen_from_panel_widget  (PanelWidget *panel);
 
 gboolean panel_is_applet_right_stick (GtkWidget *applet);
